website now fully functions as intended

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -12,18 +12,25 @@
 
 <div class="row">
   <div class="col-lg-4 col-md-6 col-sm-12">
-  	<h2> Chicken </h2> 
-  	<p>Item 1</p>
+  	<div class="inner">
+    <h2> Chicken </h2> 
+  	<p>Indulge in our succulent Chicken selections, a perfect fusion of flavors and tenderness. From sizzling grilled chicken breast to our signature creamy chicken Alfredo, every dish is a testament to culinary excellence. Our expert chefs have crafted these dishes to perfection, ensuring a delightful experience that satisfies every palate. Whether you prefer it grilled, sautéed, or marinated, our Chicken offerings are a feast that promises satisfaction in every bite.</p>
+    </div>
   </div>
   
+  
   <div class="col-lg-4 col-md-6 col-sm-12">
-  	<h2> Beef </h2> 
-  	<p>Item 2</p>
+  	<div class ="inner">
+    <h2> Beef </h2> 
+  	<p>Experience the rich and hearty flavors of our Beef creations, masterfully prepared to elevate your dining experience. Sink your teeth into our mouthwatering prime rib steak, cooked to your preference and seasoned with our secret blend of spices. From tender filet mignon to juicy ribeye, our Beef dishes showcase the finest cuts, paired with delectable sauces and accompaniments that enhance the taste.</p>
+    </div>
   </div>
   
   <div class="col-lg-4 col-md-12 col-sm-12">
+    <div class="inner">
   	<h2> Sushi </h2> 
-  	<p>Item 3</p>
+  	<p>Embark on a culinary journey with our exquisite Sushi selections, meticulously handcrafted by our skilled sushi chefs. Dive into the art of flavors with our signature Rainbow Roll, a vibrant combination of fresh fish and delicate rice. From traditional favorites like nigiri and sashimi to innovative creations that push the boundaries of taste, our Sushi menu offers a symphony of textures and tastes that captivate the senses.</p>
+    </div>
   </div>
 </div>
 
